@@ -1,6 +1,6 @@
 /****************************************************************************************
  * Copyright (c) 2003-2005 Max Howell <max.howell@methylblue.com>                       *
- * Copyright (c) 2007-2009 Mark Kretschmann <kretschmann@kde.org>                       *
+ * Copyright (c) 2007-2010 Mark Kretschmann <kretschmann@kde.org>                       *
  *                                                                                      *
  * This program is free software; you can redistribute it and/or modify it under        *
  * the terms of the GNU General Public License as published by the Free Software        *
@@ -130,12 +130,12 @@ namespace Debug
         KDEBUG_FATAL = 3
     };
 
-    const QString thread = QString::number( QThread::currentThreadId() ).left( 5 );
+    #define CURRENT_THREAD QString::number( QThread::currentThreadId() ).left( 5 )
 
-    static inline kdbgstream debug()   { mutex.lock(); QString ind = indent(); mutex.unlock(); return dbgstream() << QString( "amarok: (" + thread + ") " + ind + AMK_PREFIX ).toLocal8Bit().constData(); }
-    static inline kdbgstream warning() { mutex.lock(); QString ind = indent(); mutex.unlock(); return dbgstream() << QString( "amarok: (" + thread + ") " + ind + AMK_PREFIX + " [WARNING!]" ).toLocal8Bit().constData(); }
-    static inline kdbgstream error()   { mutex.lock(); QString ind = indent(); mutex.unlock(); return dbgstream() << QString( "amarok: (" + thread + ") " + ind + AMK_PREFIX + " [ERROR!]" ).toLocal8Bit().constData(); }
-    static inline kdbgstream fatal()   { mutex.lock(); QString ind = indent(); mutex.unlock(); return dbgstream() << QString( "amarok: (" + thread + ") " + ind + AMK_PREFIX ).toLocal8Bit().constData(); }
+    static inline kdbgstream debug()   { mutex.lock(); QString ind = indent(); mutex.unlock(); return dbgstream() << QString( "amarok: (" + CURRENT_THREAD + ") " + ind + AMK_PREFIX ).toLocal8Bit().constData(); }
+    static inline kdbgstream warning() { mutex.lock(); QString ind = indent(); mutex.unlock(); return dbgstream() << QString( "amarok: (" + CURRENT_THREAD + ") " + ind + AMK_PREFIX + " [WARNING!]" ).toLocal8Bit().constData(); }
+    static inline kdbgstream error()   { mutex.lock(); QString ind = indent(); mutex.unlock(); return dbgstream() << QString( "amarok: (" + CURRENT_THREAD + ") " + ind + AMK_PREFIX + " [ERROR!]" ).toLocal8Bit().constData(); }
+    static inline kdbgstream fatal()   { mutex.lock(); QString ind = indent(); mutex.unlock(); return dbgstream() << QString( "amarok: (" + CURRENT_THREAD + ") " + ind + AMK_PREFIX ).toLocal8Bit().constData(); }
 
     #undef AMK_PREFIX
 
@@ -221,8 +221,7 @@ namespace Debug
 
             mutex.lock();
 
-            const QString thread = QString::number( QThread::currentThreadId() ).left( 5 );
-            dbgstream() << QString( "amarok: (" + thread + ") " + indent() + "BEGIN: " + label ).toLocal8Bit().constData();
+            dbgstream() << QString( "amarok: (" + CURRENT_THREAD + ") " + indent() + "BEGIN: " + label ).toLocal8Bit().constData();
             Debug::modifieableIndent() += "  ";
             mutex.unlock();
         }
@@ -252,13 +251,11 @@ namespace Debug
 
             Debug::modifieableIndent().truncate( Debug::indent().length() - 2 );
 
-            const QString thread = QString::number( QThread::currentThreadId() ).left( 5 );
-
             // Print timing information, and a special message (DELAY) if the method took longer than 5s
             if( duration < 5.0 )
-                dbgstream() << QString( "amarok: (" + thread + ") " + indent() + "END__: " + m_label + " - Took " + QString::number( duration, 'g', 2 ) + "s" ).toLocal8Bit().constData();
+                dbgstream() << QString( "amarok: (" + CURRENT_THREAD + ") " + indent() + "END__: " + m_label + " - Took " + QString::number( duration, 'g', 2 ) + "s" ).toLocal8Bit().constData();
             else
-                dbgstream() << QString( "amarok: (" + thread + ") " + indent() + "END__: " + m_label + " - DELAY Took (quite long) " + QString::number( duration, 'g', 2 ) + "s" ).toLocal8Bit().constData();
+                dbgstream() << QString( "amarok: (" + CURRENT_THREAD + ") " + indent() + "END__: " + m_label + " - DELAY Took (quite long) " + QString::number( duration, 'g', 2 ) + "s" ).toLocal8Bit().constData();
 
             mutex.unlock();
         }
