@@ -16,6 +16,7 @@ VERSION 2.4
       to music provided by a running local Playdar service.
 
   CHANGES:
+    * Debugging mode (--debug) now also prints the current thread ID.
     * Bumped KDE dependency to version 4.4., and Qt dependency to 4.6.
     * Print message when a file can't be copied to a media player.
       Patch by Sergey Ivanov <123kash@gmail.com>. (BR 203820)
